--- a/src/login.fxml
+++ b/src/login.fxml
@@ -18,23 +18,18 @@
                   <Font name="System Bold Italic" size="24.0" />
                </font>
             </Text>
-            <Button fx:id="exit_btn" layoutX="539.0" layoutY="14.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="46.0" text="Exit">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Button>
          </children>
       </AnchorPane>
    </top>
    <center>
       <AnchorPane prefHeight="622.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="login_btn" layoutX="254.0" layoutY="181.0" mnemonicParsing="false" onAction="#getData" prefHeight="26.0" prefWidth="101.0" text="Log In">-->
+            <Button fx:id="login_btn" layoutX="254.0" layoutY="181.0" mnemonicParsing="false" onAction="#SwitchToMainpage" prefHeight="26.0" prefWidth="101.0" text="Log In">-->
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Button>
-            <Button fx:id="register_btn" alignment="CENTER" layoutX="268.0" layoutY="246.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="74.0" text="Register">
+            <Button fx:id="register_btn" alignment="CENTER" layoutX="268.0" layoutY="246.0" mnemonicParsing="false" onAction="#SwitchToRegister" prefHeight="26.0" prefWidth="74.0" text="Register">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
