--- a/bin/mainpage.fxml
+++ b/bin/mainpage.fxml
@@ -5,19 +5,19 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scene_controller">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller_mainpage">
    <children>
-      <TableView fx:id="Tabela_radiev" layoutX="22.0" layoutY="52.0" prefHeight="296.0" prefWidth="377.0">
+      <TableView fx:id="Tabela_radiev" layoutX="22.0" layoutY="52.0" prefHeight="296.0" prefWidth="412.0">
         <columns>
           <TableColumn fx:id="id_radia" prefWidth="38.4000244140625" text="ID" />
           <TableColumn fx:id="ime_radia" prefWidth="112.0" text="Radio" />
             <TableColumn fx:id="frekvenca_radia" prefWidth="66.39996337890625" text="Frekvenca" />
             <TableColumn fx:id="kraj_radia" prefWidth="84.00006103515625" text="Kraj" />
-            <TableColumn fx:id="naslov_radia" prefWidth="75.0" text="Naslov" />
+            <TableColumn fx:id="naslov_radia" prefWidth="107.20001220703125" text="Naslov" />
         </columns>
       </TableView>
-      <Button fx:id="brisi_btn" layoutX="466.0" layoutY="289.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="66.0" text="Izbriši" />
-      <Button fx:id="uredi_btn" layoutX="466.0" layoutY="218.0" mnemonicParsing="false" onAction="#SwitchToUredi" prefHeight="25.0" prefWidth="66.0" text="Uredi" />
+      <Button fx:id="brisi_btn" layoutX="466.0" layoutY="289.0" mnemonicParsing="false" onAction="#delete_item" prefHeight="25.0" prefWidth="66.0" text="Izbriši" />
+      <Button fx:id="uredi_btn" layoutX="466.0" layoutY="218.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="66.0" text="Uredi" />
       <Button fx:id="dodaj_btn" layoutX="466.0" layoutY="146.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="66.0" text="Dodaj" />
    </children>
 </AnchorPane>
